# vkd3d-standalone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_vkd3d_mingw.sh  build_wined3d.sh  clone_wine.sh  dbg_env_name.c  dump_hex.c  vkd3d.def  vkd3d_shader.def  vkd3d_utils.def  vkd3d_version.c
